syntax = "proto3";

package tutorial;

service Cache {
	rpc Store(StoreReq) returns (StoreResp) {}
	rpc Get(GetReq) returns (GetResp) {}
	rpc Dump(DumpReq) returns (DumpResp) {}
}

message DumpReq {
}

message DumpResp {
	repeated DumpItem items = 1;
}

message DumpItem {
	string key = 1;
	bytes val = 2;
}

message StoreReq {
	string key = 1;
	bytes val = 2;
	string account_token = 3;
}

message StoreResp {
}

message GetReq {
	string key = 1;
}

message GetResp {
	bytes val = 1;
}

service Accounts {
	rpc GetByToken(GetByTokenReq) returns (GetByTokenResp) {}
}

message GetByTokenReq {
	string token = 1;
}

message GetByTokenResp {
	Account account = 1;
}

message Account {
	int64 max_cache_keys = 1;
}

message Error {
	int64 code = 1;
	string message = 2;
	bool temporary = 3;
}
